--- a/css/style.css
+++ b/css/style.css
@@ -441,9 +441,20 @@ textarea {
     @media only screen and (max-width: 37.5em) {
       .project-details__content-title {
         font-size: 2.4rem; } }
+  .project-details__content-subtitle-title {
+    font-weight: 700;
+    font-size: 2.8rem;
+    margin-bottom: .25rem; }
+    @media only screen and (max-width: 37.5em) {
+      .project-details__content-subtitle-title {
+        font-size: 2.4rem; } }
+  .project-details__content-subtitle-sub {
+    font-weight: 400;
+    font-size: 2rem;
+    margin-bottom: 3rem; }
 .project-details__small-img-cont{
   width: 100%;
-  margin-bottom: 6rem;
+  margin-bottom: 2rem;
 }
 .project-details__small-img{
   display: block;
@@ -451,6 +462,17 @@ textarea {
   margin-left: auto;
   margin-right: auto;
 }
+.project-details__med-img-cont{
+  width: 100%;
+  margin-bottom: 4rem;
+}
+.project-details__med-img{
+  display: block;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .project-details__showcase-img-cont {
   width: 100%;
   margin-bottom: 6rem; }
@@ -474,7 +496,8 @@ textarea {
     font-size: 1.8rem;
     line-height: 1.7;
     color: grey;
-    margin-bottom: 2rem; }  
+    margin-bottom: 1rem;
+   }  
   .project-details__link {
     font-size: 1.8rem;
     line-height: 1.7;
