--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ Inside media queries 1em is always 16px i.e 1em = 16px at every screen size only
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  scroll-padding-top: 10rem; }
   @media only screen and (max-width: 75em) {
     html {
       font-size: 59%; } }
@@ -32,6 +33,7 @@ html {
   @media only screen and (min-width: 112.5em) {
     html {
       font-size: 65%; } }
+
 
 body {
   box-sizing: border-box;
@@ -785,6 +787,7 @@ figure figcaption {
   line-height: 1.7;
   color: grey;
 }
+
 
 
 @keyframes wheel {
