--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ textarea {
     padding: 1.5rem 5rem;
     font-size: 1.6rem; }
   .btn--small {
-    padding: .5rem .5rem;
+    padding: .2rem .2rem .2rem .2rem;
     font-size: 1.4rem; }
   .btn--theme {
     background: #2B394B;
